--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,4 @@
+sonar.projectKey=bassages_home-frontend
+sonar.organization=bassages-github
+
 sonar.exclusions=src/**/*.spec.ts,cypress/**/*,e2e/**/*,src/environments/**/*,src/test.ts,src/main.ts,src/karma.conf.js
