--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng lint && ng serve --open --proxy-config proxy.conf.json",
-    "build": "ng lint && ng test --watch=false --browsers=ChromeHeadless && ng build --prod && cd dist && zip -r home-frontend.zip .",
+    "build": "ng lint && ng test --code-coverage --watch=false --browsers=ChromeHeadless && ng build --prod && cd dist && zip -r home-frontend.zip .",
     "clean": "rm -rf node_modules",
     "reinstall": "npm run clean && npm install",
     "rebuild": "npm run clean && npm install && npm run build",
