--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,10 @@
 sonar.projectKey=bassages_home-frontend
 sonar.organization=bassages-github
 
-sonar.exclusions=src/**/*.spec.ts,cypress/**/*,e2e/**/*,src/environments/**/*,src/test.ts,src/main.ts,src/karma.conf.js
+sonar.sources=src/app
+sonar.tests=src/app
+sonar.test.inclusions=**/*.spec.ts
+sonar.exclusions=**/node_modules/**,**/*.module.ts,**/*.spec.ts
+sonar.ts.tslint.configPath=tslint.json
+sonar.typescript.exclusions=**/node_modules/**,**/typings.d.ts,**/main.ts,**/environments/environment*.ts,**/*routing.module.ts
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
