--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,4 @@ sonar.test.inclusions=**/*.spec.ts
 sonar.exclusions=**/node_modules/**,**/*.module.ts,**/*.spec.ts
 sonar.ts.tslint.configPath=tslint.json
 sonar.typescript.exclusions=**/node_modules/**,**/typings.d.ts,**/main.ts,**/environments/environment*.ts,**/*routing.module.ts
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
