Add sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,5 @@
+sonar.projectKey=bassages_home-frontend
+sonar.organization=bassages-github
 sonar.sources=src/app
 sonar.tests=src/app
 sonar.test.inclusions=**/*.spec.ts
