--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@ install:
 
 script:
   - npm run build
+# When using Automatic Analysis (from Github), then the code coverage is not available.
+# To have code coverage in Sonar, we need to use the sonar-scanner in the build.
 # Run the sonar-scanner (available because under "addons" the "sonarcloud" addon is present)
 # Please note that automatic scanning must be disabled on the project in SonarCloud, to do that:
 # Go to your project’s Administration > Analysis Method page and turn Automatic Analysis off.
