Replace custom spinner by ngx-spinner

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lodash": "^4.17.20",
     "moment": "2.27.0",
     "ng2-date-picker": "^10.0.0",
+    "ngx-spinner": "^10.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.2",
     "sockjs-client": "^1.5.0",
