--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "karma-jasmine-html-reporter": "^1.5.4",
     "node-sass": "^4.14.1",
     "protractor": "~7.0.0",
+    "ts-mockito": "^2.6.1",
     "ts-node": "~9.0.0",
     "tslint": "~6.1.3",
     "typescript": "~3.9.7",
