--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,10 @@
-on: push
+# Trigger analysis when pushing in main or pull requests, and when creating
+# a pull request.
+push:
+  branches:
+    - main
+pull_request:
+  types: [opened, synchronize, reopened]
 name: Build Angular
 jobs:
   build:
@@ -25,3 +31,8 @@ jobs:
         run: |
           npm i
           npm run build
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
