--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
         node-version: [14]
 
     steps:
-      - uses: hmarr/debug-action
+      - uses: hmarr/debug-action@v1.0.0
 
       - name: Branch name
         run: echo "Release event GITHUB_REF = ${GITHUB_REF}"
