--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout the given ref
         uses: actions/checkout@v1
         with:
-          ref: ${ GITHUB_REF }
+          ref: ${{ github.event.release.tag_name }}
 
 #      - name: Cache node modules
 #        uses: actions/cache@v1
