--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,3 +34,14 @@ jobs:
         run: |
           npm i
           npm run build
+
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./dist/home-frontend.zip
+          asset_name: home-frontend.zip
+          asset_content_type: application/zip
