--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,17 +20,17 @@ jobs:
           echo release name: ${{ github.event.release.name }}
           echo release tag_name: ${{ github.event.release.tag_name }}
 
-      - name: Checkout the given ref
+      - name: Checkout the tag of the release
         uses: actions/checkout@v1
         with:
           ref: ${{ github.event.release.tag_name }}
 
-      - name: Node ${{ matrix.node-version }}
+      - name: Setup Node ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: npm install and npm run build
+      - name: Run npm install and npm run build
         run: |
           npm i
           npm run build
