--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,11 @@ jobs:
         node-version: [14]
 
     steps:
-      - uses: actions/checkout@v1
+      - name: Echo (debug) action details
+        uses: hmarr/debug-action@v1.0.0
+
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Cache node modules
         uses: actions/cache@v1
@@ -27,17 +31,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Node ${{ matrix.node-version }}
+      - name: Setup Node ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: npm install and npm run build
+      - name: Run npm install and npm run build
         run: |
           npm i
           npm run build
 
-      - name: SonarCloud Scan
+      - name: Run SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
