Add Cypress test for the meterreadings page

--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "start": "ng lint && ng serve --open --proxy-config proxy.conf.json",
     "build": "ng lint && ng test --code-coverage --watch=false --browsers=ChromeHeadless && ng build --prod && cd dist && zip -r home-frontend.zip . && cd ..",
     "clean": "rm -rf node_modules && rm -rf dist && rm -rf coverage",
+    "build-cypress": "ng build --prod && cypress run",
     "reinstall": "npm run clean && npm install",
     "rebuild": "npm run clean && npm install && npm run build",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -64,6 +67,8 @@
     "@types/node": "^14.6.2",
     "@types/sockjs-client": "^1.1.1",
     "codelyzer": "^6.0.0",
+    "cypress": "^6.1.0",
+    "dayjs": "^1.9.7",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.1",
