--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng lint && ng serve --open --proxy-config proxy.conf.json",
-    "build": "ng lint && ng test --code-coverage --watch=false --browsers=ChromeHeadless && ng build --prod && cd dist && zip -r home-frontend.zip . && cd ..",
     "clean": "rm -rf node_modules && rm -rf dist && rm -rf coverage",
+
+    "serve-local": "run-s lint && ng serve --open --proxy-config proxy.conf.json",
+    "build-local": "run-s lint test-without-coverage build create-zip",
+
+    "build-ci": "run-s lint test-with-coverage build",
+    "release-ci": "run-s test-without-coverage build create-zip",
+
+    "lint": "ng lint",
+    "test-without-coverage": "ng test --watch=false --browsers=ChromeHeadless",
+    "test-with-coverage": "ng test --code-coverage  --watch=false --browsers=ChromeHeadless",
+    "build": "ng build --prod",
+    "create-zip": "cd dist && zip -r home-frontend.zip . && cd ..",
+
     "build-cypress": "ng build --prod && cypress run",
     "reinstall": "npm run clean && npm install",
     "rebuild": "npm run clean && npm install && npm run build",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "test": "ng test",
-    "lint": "ng lint",
     "e2e": "ng e2e",
     "bundle-report": "webpack-bundle-analyzer dist/stats.json"
   },
@@ -77,6 +86,7 @@
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "node-sass": "^4.14.1",
+    "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
     "ts-mockito": "^2.6.1",
     "ts-node": "~9.0.0",
