--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,13 +1,9 @@
-on:
-  # Trigger npm build and Sonar analysis when pushing in main or pull requests, and when creating
-  # a pull request.
-  push:
-    branches:
-      - main
-  pull_request:
-    types: [opened, synchronize, reopened]
+# 1. Build without unittests, these are already in the main build
+# 2. start frontend
+# 3. run end-2-end-tests during which the backend api is mocked
+name: end-2-end tests
 
-name: Build home-frontend
+on: [workflow_dispatch]
 
 jobs:
   build:
@@ -33,13 +29,7 @@ jobs:
         with:
           node-version: 14
 
-      - name: Run npm install and npm run build
+      - name: Run e2e tests
         run: |
           npm i
-          npm run ci:build
-
-      - name: Run SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          npm run ci:test-e2e
