--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -18,12 +18,12 @@ jobs:
 
       - uses: suisei-cn/actions-download-file@v1
         id: downloadfile  # Remember to give an ID if you need the output
-        name: Download the file
+        name: Download the backend artifact
         with:
           url: "https://github.com/bassages/home-server/releases/download/1.37.0/home-server-1.37.0.zip"
           target: backend
 
-      - name: Decompress backend
+      - name: Decompress backend artifact
         uses: TonyBogdanov/zip@1.0
         with:
           args: unzip -qq ./${{steps.downloadfile.filename}} -d ./backend
