--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -32,7 +32,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: 'bassages/home-server'
-
+          fetch-depth: 1
+          path: home-backend
 
 #      - name: Cache node modules
 #        uses: actions/cache@v1
