--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -35,6 +35,18 @@ jobs:
           fetch-depth: 1
           path: home-backend
 
+      - name: Set up JDK 15
+        uses: actions/setup-java@v1
+        with:
+          java-version: 15
+
+      - name: Start backend
+        uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: bootrun
+          with:
+            build-root-directory: home-backend
+
 #      - name: Cache node modules
 #        uses: actions/cache@v1
 #        with:
