--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -13,58 +13,23 @@ jobs:
       - name: Echo (debug) action details
         uses: hmarr/debug-action@v1.0.0
 
-      - name: Checkout frontend
+      - name: Checkout
         uses: actions/checkout@v2
 
-#      - uses: suisei-cn/actions-download-file@v1
-#        id: downloadfile  # Remember to give an ID if you need the output
-#        name: Download the backend artifact
-#        with:
-#          url: "https://github.com/bassages/home-server/releases/download/1.37.0/home-server-1.37.0.zip"
-#          target: backend
-#
-#      - name: Decompress backend artifact
-#        uses: TonyBogdanov/zip@1.0
-#        with:
-#          args: unzip -qq ./${{steps.downloadfile.filename}} -d ./backend
-
-      - name: Checkout backend
-        uses: actions/checkout@v2
+      - name: Cache node modules
+        uses: actions/cache@v1
         with:
-          repository: 'bassages/home-server'
-          fetch-depth: 1
-          path: home-backend
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-      - name: Set up JDK 15
-        uses: actions/setup-java@v1
+      - name: Setup Node
+        uses: actions/setup-node@v1
         with:
-          java-version: 15
+          node-version: 14
 
-#      - name: Start backend
-#        uses: eskatos/gradle-command-action@v1
-#        with:
-#          arguments: bootrun
-#          build-root-directory: home-backend
-
-      - name: Run backend background
-        working-directory: home-backend
+      - name: Run e2e tests
         run: |
-          ./gradlew bootrun &
-
-#      - name: Cache node modules
-#        uses: actions/cache@v1
-#        with:
-#          path: ~/.npm
-#          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-#          restore-keys: |
-#            ${{ runner.os }}-node-
-#
-#      - name: Setup Node
-#        uses: actions/setup-node@v1
-#        with:
-#          node-version: 14
-#
-#      - name: Run e2e tests
-#        run: |
-#          npm i
-#          npm run ci:test-e2e
+          npm i
+          npm run ci:test-e2e
