--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "create-zip": "cd dist && zip -r home-frontend.zip . && cd ..",
     "reinstall": "npm run clean && npm install",
     "cypress:run": "cypress run",
+    "cypress:open": "cypress open",
     "rebuild": "npm run clean && npm install && npm run build",
     "bundle-report": "webpack-bundle-analyzer dist/stats.json"
   },
