--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,7 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/c3/c3.min.css",
+              "node_modules/ngx-spinner/animations/timer.css",
               "src/styles.scss"
             ],
             "scripts": [
@@ -99,6 +100,7 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/c3/c3.min.css",
+              "node_modules/ngx-spinner/animations/timer.css",
               "src/styles.scss"
             ],
             "assets": [
