--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/build-angular": "~13.3.1",
-    "@angular/animations": "13.3.1",
+    "@angular/animations": "13.3.2",
     "@angular/cdk": "^13.3.2",
-    "@angular/common": "13.3.1",
-    "@angular/compiler": "13.3.1",
-    "@angular/core": "13.3.1",
-    "@angular/forms": "13.3.1",
+    "@angular/common": "13.3.2",
+    "@angular/compiler": "13.3.2",
+    "@angular/core": "13.3.2",
+    "@angular/forms": "13.3.2",
     "@angular/localize": "^13.3.1",
-    "@angular/platform-browser": "13.3.1",
-    "@angular/platform-browser-dynamic": "13.3.1",
-    "@angular/router": "13.3.1",
+    "@angular/platform-browser": "13.3.2",
+    "@angular/platform-browser-dynamic": "13.3.2",
+    "@angular/router": "13.3.2",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
@@ -50,7 +50,7 @@
     "chroma-js": "^2.1.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "ng2-date-picker": "^13.1.1",
     "ngx-spinner": "^13.1.1",
     "popper.js": "^1.16.1",
@@ -66,35 +66,32 @@
     "@angular-eslint/eslint-plugin-template": "13.2.0",
     "@angular-eslint/schematics": "13.2.0",
     "@angular-eslint/template-parser": "13.2.0",
-    "@angular/cli": "13.3.1",
-    "@angular/compiler-cli": "13.3.1",
-    "@angular/language-service": "13.3.1",
-    "@types/jasmine": "~3.6.0",
+    "@angular/cli": "13.3.2",
+    "@angular/compiler-cli": "13.3.2",
+    "@angular/language-service": "13.3.2",
+    "@types/jasmine": "~4.0.2",
     "@types/jasminewd2": "~2.0.8",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^15.0.1",
+    "@types/lodash-es": "^4.17.6",
+    "@types/node": "^17.0.23",
     "@types/sockjs-client": "^1.5.0",
-    "@typescript-eslint/eslint-plugin": "5.17.0",
-    "@typescript-eslint/parser": "5.17.0",
-    "codelyzer": "^6.0.1",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
     "cypress": "^7.2.0",
     "dayjs": "^1.11.0",
     "eslint": "^8.12.0",
-    "jasmine-core": "~3.7.1",
+    "jasmine-core": "~4.0.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "node-sass": "^5.0.0",
+    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
     "start-server-and-test": "^1.12.1",
     "ts-mockito": "^2.6.1",
-    "ts-node": "~9.1.1",
-    "tslint": "~6.1.3",
+    "ts-node": "~10.7.0",
     "typescript": "~4.6.3",
     "webpack-bundle-analyzer": "^4.4.1"
   }
