--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,17 +10,17 @@ jobs:
 
     steps:
       - name: Echo (debug) action details
-        uses: hmarr/debug-action@v1.0.0
+        uses: hmarr/debug-action@v2
 
       - name: Checkout the tag of the release
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           ref: ${{ github.event.release.tag_name }}
 
       - name: Setup Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 16
 
       - name: Run npm install and npm run build
         run: |
@@ -28,12 +28,7 @@ jobs:
           npm run ci:release
 
       - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./dist/home-frontend.zip
-          asset_name: home-frontend.zip
-          asset_content_type: application/zip
+          files: ./dist/home-frontend.zip
