Make sure lcov.info is generated during ci build

--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "local:serve-interactive": "run-s lint && ng serve --open --proxy-config proxy.conf.json",
     "ci:build": "run-s lint test-with-coverage build",
-    "ci:release": "run-s test-without-coverage build create-zip",
+    "ci:release": "run-s test-no-watch-no-coverage build create-zip",
     "ci:test-e2e": "start-server-and-test serve http://localhost:4200 cypress:run",
     "ng": "ng",
     "clean": "rm -rf node_modules && rm -rf dist && rm -rf coverage",
     "serve": "ng serve --proxy-config proxy.conf.json",
     "lint": "ng lint",
-    "test-without-coverage": "ng test --watch=false --browsers=ChromeHeadless",
-    "test-with-coverage": "ng test --code-coverage  --watch=false --browsers=ChromeHeadless",
+    "test-interactive": "ng test",
+    "test-no-watch-no-coverage": "ng test --watch=false --browsers=ChromeHeadless",
+    "test-with-coverage": "ng test --code-coverage --watch=false --browsers=ChromeHeadless",
     "build": "ng build --configuration production",
     "create-zip": "cd dist && zip -r home-frontend.zip . && cd ..",
     "reinstall": "npm run clean && npm install",
