--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "esModuleInterop": true,
     "importHelpers": true,
     "module": "es2020",
     "outDir": "./dist/out-tsc",
