--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "local:serve-interactive": "run-s lint && ng serve --open --proxy-config proxy.conf.json",
     "ci:build": "run-s lint test-with-coverage build",
     "ci:release": "run-s test-no-watch-no-coverage build create-zip",
-    "ci:test-e2e": "start-server-and-test serve http://localhost:4200 cypress:run",
     "ng": "ng",
     "clean": "rm -rf node_modules && rm -rf dist && rm -rf coverage",
     "serve": "ng serve --proxy-config proxy.conf.json",
@@ -17,84 +16,80 @@
     "build": "ng build --configuration production",
     "create-zip": "cd dist && zip -r home-frontend.zip . && cd ..",
     "reinstall": "npm run clean && npm install",
-    "cypress:run": "cypress run",
-    "cypress:open": "cypress open",
-    "rebuild": "npm run clean && npm install && npm run build",
-    "bundle-report": "webpack-bundle-analyzer dist/stats.json"
+    "rebuild": "npm run clean && npm install && npm run build"
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^14.2.8",
-    "@angular/animations": "14.2.8",
-    "@angular/cdk": "^14.2.6",
-    "@angular/common": "14.2.8",
-    "@angular/compiler": "14.2.8",
-    "@angular/core": "14.2.8",
-    "@angular/forms": "14.2.8",
-    "@angular/localize": "^14.2.8",
-    "@angular/platform-browser": "14.2.8",
-    "@angular/platform-browser-dynamic": "14.2.8",
-    "@angular/router": "14.2.8",
-    "@fortawesome/angular-fontawesome": "^0.11.1",
-    "@fortawesome/fontawesome-free": "^6.2.0",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^13.1.0",
-    "@popperjs/core": "^2.11.4",
+    "@angular-devkit/build-angular": "^16.1.1",
+    "@angular/animations": "^16.1.2",
+    "@angular/cdk": "^16.1.2",
+    "@angular/common": "^16.1.2",
+    "@angular/compiler": "^16.1.2",
+    "@angular/core": "^16.1.2",
+    "@angular/forms": "^16.1.2",
+    "@angular/localize": "^16.1.2",
+    "@angular/platform-browser": "^16.1.2",
+    "@angular/platform-browser-dynamic": "^16.1.2",
+    "@angular/router": "^16.1.2",
+    "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.0.1",
+    "@popperjs/core": "^2.11.8",
     "@stomp/ng2-stompjs": "^8.0.0",
     "@types/c3": "^0.4.54",
-    "@types/chroma-js": "^2.1.4",
+    "@types/chroma-js": "^2.4.0",
     "@types/popper.js": "^1.11.0",
-    "bootstrap": "^5.2.2",
+    "bootstrap": "^5.3.0",
     "c3": "^0.4.24",
-    "chroma-js": "^2.1.1",
+    "chroma-js": "^2.4.2",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.6.1",
+    "jquery": "^3.7.0",
     "lodash-es": "^4.17.21",
-    "ng2-date-picker": "^14.0.1",
-    "ngx-spinner": "^14.0.0",
+    "ng2-date-picker": "^16.0.0",
+    "ngx-spinner": "^16.0.2",
     "popper.js": "^1.16.1",
-    "rxjs": "^7.5.7",
+    "rxjs": "^7.8.1",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
-    "tslib": "^2.4.1",
-    "zone.js": "~0.11.8"
+    "tslib": "^2.5.3",
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-eslint/builder": "14.1.2",
-    "@angular-eslint/eslint-plugin": "14.1.2",
-    "@angular-eslint/eslint-plugin-template": "14.1.2",
-    "@angular-eslint/schematics": "14.1.2",
-    "@angular-eslint/template-parser": "14.1.2",
-    "@angular/cli": "14.2.8",
-    "@angular/compiler-cli": "14.2.8",
-    "@angular/language-service": "14.2.8",
-    "@types/jasmine": "~4.3.0",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/lodash-es": "^4.17.6",
-    "@types/node": "^18.11.9",
-    "@types/sockjs-client": "^1.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
-    "cypress": "^7.2.0",
-    "dayjs": "^1.11.6",
-    "eslint": "^8.26.0",
-    "jasmine-core": "~4.5.0",
+    "@angular-eslint/builder": "^16.0.3",
+    "@angular-eslint/eslint-plugin": "^16.0.3",
+    "@angular-eslint/eslint-plugin-template": "^16.0.3",
+    "@angular-eslint/schematics": "^16.0.3",
+    "@angular-eslint/template-parser": "^16.0.3",
+    "@angular/cli": "^16.1.1",
+    "@angular/compiler-cli": "^16.1.1",
+    "@angular/language-service": "^16.1.2",
+    "@types/jasmine": "~4.3.4",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/lodash-es": "^4.17.7",
+    "@types/node": "^20.3.1",
+    "@types/sockjs-client": "^1.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "cypress": "^12.15.0",
+    "dayjs": "^1.11.8",
+    "eslint": "^8.43.0",
+    "jasmine-core": "~5.0.1",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.4.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "^2.2.0",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "^2.2.1",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "^2.0.0",
-    "node-sass": "^7.0.3",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "node-sass": "^9.0.0",
     "npm-run-all": "^4.1.5",
-    "protractor": "~7.0.0",
-    "start-server-and-test": "^1.12.1",
+    "start-server-and-test": "^2.0.0",
     "ts-mockito": "^2.6.1",
     "ts-node": "~10.9.1",
-    "typescript": "~4.7.4",
-    "webpack-bundle-analyzer": "^4.7.0"
+    "typescript": "~5.0.4",
+    "webpack-bundle-analyzer": "^4.9.0"
   }
 }
