--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,13 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "importHelpers": true,
-    "module": "es2020",
+    "module": "ES2022",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
     "experimentalDecorators": true,
-    "target": "es2020",
+    "target": "ES2022",
     "typeRoots": [
       "node_modules/@types"
     ],
