--- a/package.json
+++ b/package.json
@@ -32,18 +32,18 @@
     "@angular/platform-browser-dynamic": "^16.1.2",
     "@angular/router": "^16.1.2",
     "@fortawesome/angular-fontawesome": "^0.13.0",
-    "@fortawesome/fontawesome-free": "^6.4.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@ng-bootstrap/ng-bootstrap": "^15.0.1",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@popperjs/core": "^2.11.8",
     "@stomp/ng2-stompjs": "^8.0.0",
     "@types/c3": "^0.4.54",
     "@types/chroma-js": "^2.4.0",
     "@types/popper.js": "^1.11.0",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.1",
     "c3": "^0.4.24",
     "chroma-js": "^2.4.2",
     "font-awesome": "^4.7.0",
@@ -69,15 +69,14 @@
     "@angular/language-service": "^16.1.2",
     "@types/jasmine": "~4.3.4",
     "@types/jasminewd2": "~2.0.10",
-    "@types/lodash-es": "^4.17.7",
-    "@types/node": "^20.3.1",
+    "@types/lodash-es": "^4.17.8",
+    "@types/node": "^20.5.0",
     "@types/sockjs-client": "^1.5.1",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
-    "cypress": "^12.15.0",
-    "dayjs": "^1.11.8",
-    "eslint": "^8.43.0",
-    "jasmine-core": "~5.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "dayjs": "^1.11.9",
+    "eslint": "^8.47.0",
+    "jasmine-core": "~5.1.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
@@ -89,7 +88,6 @@
     "start-server-and-test": "^2.0.0",
     "ts-mockito": "^2.6.1",
     "ts-node": "~10.9.1",
-    "typescript": "~5.0.4",
-    "webpack-bundle-analyzer": "^4.9.0"
+    "typescript": "~5.1.6"
   }
 }
