--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^16.1.1",
-    "@angular/animations": "^16.1.2",
-    "@angular/cdk": "^16.1.2",
-    "@angular/common": "^16.1.2",
-    "@angular/compiler": "^16.1.2",
-    "@angular/core": "^16.1.2",
-    "@angular/forms": "^16.1.2",
-    "@angular/localize": "^16.1.2",
-    "@angular/platform-browser": "^16.1.2",
-    "@angular/platform-browser-dynamic": "^16.1.2",
-    "@angular/router": "^16.1.2",
+    "@angular-devkit/build-angular": "^16.2.5",
+    "@angular/animations": "^16.2.8",
+    "@angular/cdk": "^16.2.7",
+    "@angular/common": "^16.2.8",
+    "@angular/compiler": "^16.2.8",
+    "@angular/core": "^16.2.8",
+    "@angular/forms": "^16.2.8",
+    "@angular/localize": "^16.2.8",
+    "@angular/platform-browser": "^16.2.8",
+    "@angular/platform-browser-dynamic": "^16.2.8",
+    "@angular/router": "^16.2.8",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -64,9 +64,9 @@
     "@angular-eslint/eslint-plugin-template": "^16.0.3",
     "@angular-eslint/schematics": "^16.0.3",
     "@angular-eslint/template-parser": "^16.0.3",
-    "@angular/cli": "^16.1.1",
-    "@angular/compiler-cli": "^16.1.1",
-    "@angular/language-service": "^16.1.2",
+    "@angular/cli": "^16.2.5",
+    "@angular/compiler-cli": "^16.2.8",
+    "@angular/language-service": "^16.2.8",
     "@types/jasmine": "~4.3.4",
     "@types/jasminewd2": "~2.0.10",
     "@types/lodash-es": "^4.17.8",
@@ -83,7 +83,7 @@
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "node-sass": "^9.0.0",
+    "sass": "^1.69.0",
     "npm-run-all": "^4.1.5",
     "start-server-and-test": "^2.0.0",
     "ts-mockito": "^2.6.1",
